@@ -82,7 +82,7 @@ config.store_user_info = {:method => :current_user, :field => :login}
 ```
 
 Default value: false (no info will be stored)
-If you turn this on and the error is generated by a client that is not logged in, then "Anonymous" will be used. Currently, "Anonymous" is always used on routing errors, regardless of whether the user is logged in or not. This because the error happens before a controller instance has been initialized, and I haven't found a safe way to do this manually yet.
+If you turn this on and the error is generated by a client that is not logged in, then "Anonymous" will be used.
 
 ### responses and response_mapping
 
